log
Fri Mar 27 04:56:56 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
593994a
Fri Mar 27 05:12:02 PM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
716d255
Fri Mar 27 05:14:22 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
35ff7a9
Fri Mar 27 05:14:54 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
0381869
Fri Mar 27 05:24:10 PM UTC 2026: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
922120a
Fri Mar 27 05:29:18 PM UTC 2026: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
71f013d
Fri Mar 27 05:30:28 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
c3e534b
Fri Mar 27 05:31:24 PM UTC 2026: 
 tests:  5|4
total_score: 20/60
55f8e99
Fri Mar 27 05:52:59 PM UTC 2026: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 20/60
735000a
Fri Mar 27 06:18:15 PM UTC 2026: 
 list.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
1c25a31
Fri Mar 27 06:35:32 PM UTC 2026: 
 list.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  5|4
total_score: 20/60
7ad4a96
Sat Mar 28 05:52:03 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:109:29: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  109 |     if (list == NULL)return NULL;
      |                             ^~~~
list.c:107:6: note: declared here
  107 | void pushCurrent(List * list, void * data)
      |      ^~~~~~~~~~~
54a3033
Sat Mar 28 05:53:06 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:109:35: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  109 |     if (list->head == NULL)return NULL;
      |                                   ^~~~
list.c:107:6: note: declared here
  107 | void pushCurrent(List * list, void * data)
      |      ^~~~~~~~~~~
5d0ffb5
